# habit-tracker

./: .dockerignore  .env.bak  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  conftest.py  docker-compose.yaml  habit_tracker.db  habits.db  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test.yml
alembic/: env.py
alembic/sqlite_versions/: 69a1d0a9e1cf_added_hashed_password_and_disabled_.py  71e059a1ab6b_rename_user_name_to_username.py  d93998fbdfca_initial_migration.py  ed65e845dd8a_add_unique_contraints_to_users.py  ef9f82b36f8f_add_user_role_column.py
alembic/versions/: 69a1d0a9e1cf_added_hashed_password_and_disabled_.py  6a7fef1e6614_initial_postgresql_schema.py  71e059a1ab6b_rename_user_name_to_username.py  a8f30d9d343d_add_tags_to_habits_table.py  d93998fbdfca_initial_migration.py  ed65e845dd8a_add_unique_contraints_to_users.py
core/: db.py  greet.py  habit.py
src/: main.py
src/api/: app.py  main.py  middleware.py
src/api/v1/routers/: admin.py  ai.py  dependencies.py  habits.py  reports.py  security.py  users.py
src/cli/: __init__.py  commands.py  main.py
src/core/: ai_service.py  cache.py  db.py  exception_handlers.py  exceptions.py  greet.py  habit.py  habit_async.py  habit_tracker.db  models.py  schemas.py  security.py  startup.py
src/core/db/: base.py  crud.py
src/core/events/: dispatcher.py  events.py  handlers.py
src/infrastructure/ai/: ai_client.py  ollama_client.py
src/infrastructure/aws/: DYNAMODB_DESIGN.md  aws_helper.py  dynamodb_client.py  email_client.py  queue_client.py  s3_client.py  worker.py
src/infrastructure/aws/data/: dynamodb_table.yml  sqs_queue.yml
src/infrastructure/pdf/: report_pdf.py  reports_service.py
src/infrastructure/pdf/data/templates/: test_output.html  weekly_report.html
src/repository/: base.py  habit_repository.py  user_repository.py
src/scripts/: deploy_sqs.sh
src/utils/: decorators.py  helpers.py  logger.py  timer.py
tests/: test_ai_service.py  test_ai_service_pbt.py  test_cache_key_pbt.py  test_cache_redis.py  test_config.py  test_habit_api.py  test_habit_handler.py  test_habit_history.py  test_habit_manager.py  test_habit_repository.py  test_habit_service.py  test_habit_update.py  test_handlers.py  test_handlers_extended.py  test_ollama_client.py  test_reports.py  test_s3_client.py  test_user_manager.py  test_user_repository.py  test_user_service.py  test_worker.py
tests/test_data/: data.py
